--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
 
     // MultiDex
     implementation "androidx.multidex:multidex:2.0.1"
+
+
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
 }
